--- a/src/main/resources/simulation.fxml
+++ b/src/main/resources/simulation.fxml
@@ -2,11 +2,23 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.VBox?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             minHeight="550.0" minWidth="850.0"
             fx:controller="agh.ics.oop.presenter.SimulationPresenter">
+    <top>
+        <VBox spacing="10" alignment="CENTER">
+            <TextField fx:id="movementTextField" promptText="Wpisz listę ruchów (np. F R F L)" />
+            <Label fx:id="movementDescriptionLabel" text="Opis ruchu pojawi się tutaj." />
+        </VBox>
+    </top>
     <center>
         <Label fx:id="infoLabel" text="Map will be here" textAlignment="CENTER"/>
     </center>
+    <bottom>
+        <Button fx:id="startButton" text="Start" onAction="#onSimulationStartClicked" />
+    </bottom>
 </BorderPane>
