--- a/src/main/resources/simulation.fxml
+++ b/src/main/resources/simulation.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.GridPane?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             minHeight="550.0" minWidth="850.0"
@@ -16,7 +17,7 @@
         </VBox>
     </top>
     <center>
-        <Label fx:id="infoLabel" text="Map will be here" textAlignment="CENTER"/>
+        <GridPane fx:id="mapGrid" gridLinesVisible="true"/>
     </center>
     <bottom>
         <Button fx:id="startButton" text="Start" onAction="#onSimulationStartClicked" />
