--- a/src/main/resources/simulation.fxml
+++ b/src/main/resources/simulation.fxml
@@ -12,12 +12,12 @@
             fx:controller="agh.ics.oop.presenter.SimulationPresenter">
     <top>
         <VBox spacing="10" alignment="CENTER">
-            <TextField fx:id="movementTextField" promptText="Wpisz listę ruchów (np. F R F L)" />
-            <Label fx:id="movementDescriptionLabel" text="Opis ruchu pojawi się tutaj." />
+            <TextField fx:id="inputMovesField" promptText="Wpisz listę ruchów (np. F R F L)" />
+            <Label fx:id="statusLabel" text="Opis ruchu pojawi się tutaj." />
         </VBox>
     </top>
     <center>
-        <GridPane fx:id="mapGrid" gridLinesVisible="true"/>
+        <GridPane fx:id="gridDisplay" gridLinesVisible="true"/>
     </center>
     <bottom>
         <Button fx:id="startButton" text="Start" onAction="#onSimulationStartClicked" />
